glsl: fix constant in parameter check

Only checking the type means we would incorrectly throw an error for arrays of constants.

Fixes: ac0f8bae8d39 ("glsl: Combine AST-level and IR-level parameter mode checking loops.")

Closes: https://gitlab.freedesktop.org/mesa/mesa/-/issues/6365